added a dll injector to tasks, appears to work?

--- a/dependencies/imgui/imgui.vcxproj
+++ b/dependencies/imgui/imgui.vcxproj
@@ -54,6 +54,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\imgui\imgui.cpp" />
+    <ClCompile Include="src\imgui\ImGuiFileDialog.cpp" />
     <ClCompile Include="src\imgui\imgui_demo.cpp" />
     <ClCompile Include="src\imgui\imgui_draw.cpp" />
     <ClCompile Include="src\imgui\imgui_impl_dx11.cpp" />
@@ -65,8 +66,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\imgui.hpp" />
+    <ClInclude Include="src\imgui\dirent\dirent.h" />
     <ClInclude Include="src\imgui\imconfig.h" />
     <ClInclude Include="src\imgui\imgui.h" />
+    <ClInclude Include="src\imgui\ImGuiFileDialog.h" />
+    <ClInclude Include="src\imgui\ImGuiFileDialogConfig.h" />
     <ClInclude Include="src\imgui\imgui_impl_dx11.h" />
     <ClInclude Include="src\imgui\imgui_impl_glfw.h" />
     <ClInclude Include="src\imgui\imgui_impl_opengl3.h" />
