--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -12,9 +12,9 @@ Size=400,400
 Collapsed=0
 
 [Window][tasks]
-ViewportPos=1082,241
+ViewportPos=839,361
 ViewportId=0x50586597
-Size=1103,984
+Size=629,794
 Collapsed=0
 
 [Window][yoo]
@@ -23,6 +23,11 @@ ViewportId=0xA4D966FE
 Size=239,374
 Collapsed=0
 DockId=0x00000002,0
+
+[Window][Choose File##ChooseFileDlgKey]
+Pos=60,60
+Size=32,39
+Collapsed=0
 
 [Table][0x652F3F2A,2]
 Column 0  Weight=1.2896
